# nr-ray-tracer

./: .gitignore  Cargo.toml
scenes/: cornell-box-model.json  cornell-box-scene.json  cornell-box.json  cornell-box.toml  cube-model.toml  cube-scene.json  earth.toml  noise.toml  quads.toml  rt-in-one-week-1.json  rt-in-one-week-2.json  rt-in-one-week-3.json  rt-in-one-week-3.toml  rt-in-one-week-4.json  rt-the-next-week-1.json  rt-the-next-week-2.json  rt-the-next-week-3.json  rt-the-next-week-4.json  rt-the-next-week-5.json  rt-the-next-week-6.json  rt-the-next-week-7.json  scale.json  scale.toml  simple-lights.toml  sphere.toml  spheres.toml  triangles.toml  utah-teapot-scene.json
scripts/: README.md  generate-scene.py  pyproject.toml
scripts/src/scripts/: __init__.py
scripts/src/scripts/common/: camera.py  materials.py  seq.py  serializable.py  shapes.py  texture.py  vec.py
scripts/src/scripts/generators/: inoneweekend#1.py  inoneweekend#2.py  simple.py  thenextweek#1.py  thenextweek#2.py  thenextweek#3.py  thenextweek#4.py  thenextweek#5.py  thenextweek#6.py  thenextweek#7.py
